--- a/practice_15_dropping_boxes/style.css
+++ b/practice_15_dropping_boxes/style.css
@@ -7,6 +7,9 @@
 
 body{
   text-align: center;
+
+  overflow: hidden;
+  /*hide scrollbar when the contents translate over the screen bottom*/
 }
 
 .box{
@@ -14,6 +17,13 @@ body{
   width: 70px;
   height: 70px;
   cursor: pointer;
+
+  /*margin-right: -4px;*/
+  /*Remove the default space 4px between inline-block elements*/
+
+	vertical-align: top;
+  /*Default is baseline, so when the element animation change the active element height,
+  the parent height will change and other elements will move to align the parent baseline. */
 }
 
 .box:hover {
